# api-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api-statefulset.yaml  fly.toml  litestream.yml  pyproject.toml
.github/workflows/: container-image.yaml  deploy-fly.yaml  look-for-todos.yaml  tests.yaml
app/: dependencies.py  main.py  oauth.py  protocols.py  settings.py
app/api/: dependencies.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  customers.py  projects.py  user.py
app/core/: config.py
app/core/config_models/: db.py  github.py  oauth.py  path.py  security.py
app/database/: base.py  custom_base.py  project.py  user.py
app/database/crud/: project.py  user.py
app/models/: exception.py  project.py  terraform.py  token.py  urls.py  user.py
app/services/: cryptography.py  github.py  google_api.py  helpers.py  openapi.py
migrations/: env.py
migrations/versions/: 9ec86774007a_migrate_to_sqlite.py
services/: crypto.py  github.py  googleapi.py  googleauth.py  jwt.py
